-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 Beta1
-
None
-
macOS (testing on Mojave)
-
-
8111f1a069e8b73602dd6b70b4390cd91fb69846 (qt/qtmultimedia/dev)
On this page it says "Qt 6 also has cross platform support for decoding audio files into raw PCM data using the QAudioDecoder class"
Which means decoding mp3 using qt6 on mac should work, right?
well, it doesn't
it won't decode mp3, gives this error: "QAudioDecoder::FormatError: Unsupported Source Format"
is this issue KNOWN? is it expected?
minimal runnable example here, compiles and runs on mac and windows, qt5 and qt6. it won't link on qt6 just yet due to this other bug.
Results:
qt5 mac: ERROR: Service missing: "The QAudioDecoder object does not have a valid service" (as expected)
qt5 win: works! YAY!
qt6 mac: ERROR: Format: "Unsupported source format" <-- this should work, no?
qt6 win: works! YAY!
For Gerrit Dashboard: QTBUG-95360 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
362868,3 | Set default Int16 format for audio decoding on darwin | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |