Set default Int16 format for audio decoding on darwin

AVFAudioDecoder uses the audio track's AudioStreamBasicDescription to
specify the format for the decoded audio. However, the bitsPerChannel
field is irrelevant for compressed formats and is always 0, so we can't
use it to determine the decoded audio's sample format from it. Set a
default sample format (Int16)  in this case.

Fixes: QTBUG-95360
Change-Id: Ibdf597e177838bd339749fbdc126334707e4ebd9
Reviewed-by: André de la Rocha <andre.rocha@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>